[metadata]
name = hcat
version = 0.1.0
author = Chris Buswinka
author_email = buswinka@g.harvard.edu
classifiers =
            'Environment :: GPU :: NVIDIA CUDA :: 11.0',
            'Development Status :: 4 - Beta',
            'Intended Audience :: Science/Research',
            'License :: OSI Approved :: MIT License',
            'Operating System :: POSIX :: Linux',
            'Programming Language :: Python :: 3.9'
url = https://github.com/buswinka/hcat

[options]
zip_safe = False
;
;[options.packages.find]
;where = src
;
